# onyx

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPENDENCIES.md  DEVPLAN.md  GUIDELINES.md  LICENSE  README.md  index.html  mockup.html  package-lock.json  package.json  vite.config.ts
.claude/: gg-project.md
docs/: ARCHITECTURE.md  CHANGELOG.md  DEBT.md  DEPENDENCIES.md  DEVPLAN.md  FS_REACTIVITY_SPEC.md  ISSUES.md  mockup.html
docs/Archive/: PHASE9_PLAN.md
research/: architecture-patterns.md  css-theming.md  note-app-gotchas.md  note-app-ux.md  tech-stack-gotchas.md
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bookmarks.rs  commands.rs  config.rs  db.rs  dirs.rs  folder_rules.rs  indexer.rs  lib.rs  main.rs  object_types.rs  paths.rs  periodic.rs  scripts.rs  watcher.rs
src/components/: BookmarkStrip.tsx  Calendar.tsx  CommandPalette.tsx  ContextPanel.tsx  Editor.tsx  EditorPane.tsx  ErrorBoundary.tsx  Icon.tsx  IconPicker.tsx  LintPanel.tsx  QuickOpen.tsx  SearchPanel.tsx  Settings.tsx  Sidebar.tsx  SidebarContextMenu.tsx  StatusBar.tsx  TabBar.tsx  ThemePreview.tsx  Titlebar.tsx  editorShared.ts
src/extensions/: autocomplete.ts  blocks.ts  embeds.ts  formatting.ts  frontmatter.ts  headingFold.ts  inlineSvgIcons.ts  linting.ts  livePreview.ts  outliner.ts  slashCommands.ts  sortTaskList.ts  spellcheck.ts  symbolWrap.ts  tableAdapter.ts  tableEditor.ts  tags.ts  urlPaste.ts  wikilinks.ts
src/lib/: commands.ts  configBridge.ts  configTypes.ts  (+10 more)
(+5 files in other folders)
